--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
+      # 1️⃣ Checkout repository
       - name: Checkout Repository
         uses: actions/checkout@v3
 
@@ -34,14 +34,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pub-
 
-      # 4️⃣ Ensure Android folder exists
-      - name: Ensure Android folder
+      # 4️⃣ Ensure full Android folder with v2 embedding
+      - name: Ensure full Android folder (v2 embedding)
         run: |
-          if [ ! -d "android" ]; then
-            echo "Android folder missing. Generating..."
-            flutter create .
-          else
-            echo "Android folder exists."
+          echo "Recreating Android folder for Flutter v2 embedding..."
+          # Backup existing .gitignore
+          if [ -f android/.gitignore ]; then
+            cp android/.gitignore android/.gitignore.backup
+          fi
+          # Remove old Android folder (even if empty or v1)
+          rm -rf android
+          # Create new Android folder
+          flutter create .
+          # Restore .gitignore if it existed
+          if [ -f android/.gitignore.backup ]; then
+            mv android/.gitignore.backup android/.gitignore
           fi
 
       # 5️⃣ Get dependencies
@@ -60,7 +67,7 @@ jobs:
       - name: Build APK (Release)
         run: flutter build apk --release --target-platform android-arm,android-arm64,android-x64
 
-      # 9️⃣ Upload artifacts
+      # 9️⃣ Upload APKs
       - name: Upload APKs
         uses: actions/upload-artifact@v4
         with:
