--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   flutter_svg: ^2.0.10
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.12.0
+  
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
