--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Flutter (latest stable)
+      # 2️⃣ Setup Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -64,7 +64,13 @@ jobs:
           sed -i 's|distributionUrl=.*|distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
           echo "✅ Forced Gradle 8.6"
 
-      # 9️⃣ Set SDK versions
+      # 9️⃣ Generate local.properties for CI (required by plugins)
+      - name: Generate local.properties
+        run: |
+          echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.3-x64" > android/local.properties
+          echo "✅ Created local.properties"
+
+      # 🔟 Set SDK versions before plugin evaluation
       - name: Set SDK versions
         run: |
           sed -i 's/compileSdkVersion .*/compileSdkVersion 35/' android/app/build.gradle
@@ -72,15 +78,15 @@ jobs:
           sed -i 's/minSdkVersion .*/minSdkVersion 21/' android/app/build.gradle
           echo "✅ SDK versions set"
 
-      # 🔟 Flutter doctor for debug info
+      # 1️⃣1️⃣ Flutter doctor for debug info
       - name: Flutter Doctor
         run: flutter doctor -v
 
-      # 1️⃣1️⃣ Build Release APK
+      # 1️⃣2️⃣ Build Release APK
       - name: Build Release APK
         run: flutter build apk --release --no-shrink
 
-      # 1️⃣2️⃣ Upload Release APK
+      # 1️⃣3️⃣ Upload Release APK
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
