--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,10 +64,11 @@ jobs:
           sed -i 's|distributionUrl=.*|distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
           echo "✅ Forced Gradle 8.6"
 
-      # 9️⃣ Generate local.properties for CI (required by plugins)
+      # 9️⃣ Generate local.properties for CI (Flutter + Android SDK paths)
       - name: Generate local.properties
         run: |
           echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.3-x64" > android/local.properties
+          echo "sdk.dir=/usr/lib/android-sdk" >> android/local.properties
           echo "✅ Created local.properties"
 
       # 🔟 Set SDK versions before plugin evaluation
@@ -82,11 +83,19 @@ jobs:
       - name: Flutter Doctor
         run: flutter doctor -v
 
-      # 1️⃣2️⃣ Build Release APK
+      # 1️⃣2️⃣ Clean build artifacts
+      - name: Clean Flutter project
+        run: flutter clean
+
+      # 1️⃣3️⃣ Get dependencies again
+      - name: Get Flutter dependencies
+        run: flutter pub get
+
+      # 1️⃣4️⃣ Build Release APK
       - name: Build Release APK
         run: flutter build apk --release --no-shrink
 
-      # 1️⃣3️⃣ Upload Release APK
+      # 1️⃣5️⃣ Upload Release APK
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
