--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,52 +58,32 @@ jobs:
         run: |
           sed -i 's|distributionUrl=.*|distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
 
-      # 9️⃣ Generate local.properties
+      # 9️⃣ Generate local.properties for CI
       - name: Generate local.properties
         run: |
           echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.3-x64" > android/local.properties
           echo "sdk.dir=/usr/lib/android-sdk" >> android/local.properties
 
-      # 🔟 Patch settings.gradle (Gradle 8+ compatible)
-      - name: Patch settings.gradle
-        run: |
-          echo "import java.util.Properties" > android/settings.gradle
-          echo "" >> android/settings.gradle
-          echo "def localPropertiesFile = new File(rootDir, \"local.properties\")" >> android/settings.gradle
-          echo "def localProperties = new Properties()" >> android/settings.gradle
-          echo "if (localPropertiesFile.exists()) {" >> android/settings.gradle
-          echo "    localPropertiesFile.withReader('UTF-8') { reader ->" >> android/settings.gradle
-          echo "        localProperties.load(reader)" >> android/settings.gradle
-          echo "    }" >> android/settings.gradle
-          echo "}" >> android/settings.gradle
-          echo "def flutterSdkPath = localProperties.getProperty('flutter.sdk')" >> android/settings.gradle
-          echo "if (flutterSdkPath == null) {" >> android/settings.gradle
-          echo "    throw new GradleException(\"flutter.sdk not set in local.properties\")" >> android/settings.gradle
-          echo "}" >> android/settings.gradle
-          echo "apply from: \"\$flutterSdkPath/packages/flutter_tools/gradle/flutter.gradle\"" >> android/settings.gradle
-          echo "" >> android/settings.gradle
-          echo "include ':app'" >> android/settings.gradle
-
-      # 1️⃣1️⃣ Set SDK versions
+      # 🔟 Set SDK versions
       - name: Set SDK versions
         run: |
           sed -i 's/compileSdkVersion .*/compileSdkVersion 35/' android/app/build.gradle
           sed -i 's/targetSdkVersion .*/targetSdkVersion 35/' android/app/build.gradle
           sed -i 's/minSdkVersion .*/minSdkVersion 21/' android/app/build.gradle
 
-      # 1️⃣2️⃣ Clean Flutter project
+      # 1️⃣1️⃣ Clean Flutter project
       - name: Clean Flutter project
         run: flutter clean
 
-      # 1️⃣3️⃣ Get Flutter dependencies again
+      # 1️⃣2️⃣ Get Flutter dependencies again
       - name: Get Flutter dependencies
         run: flutter pub get
 
-      # 1️⃣4️⃣ Build Release APK
+      # 1️⃣3️⃣ Build Release APK
       - name: Build Release APK
         run: flutter build apk --release --no-shrink
 
-      # 1️⃣5️⃣ Upload Release APK
+      # 1️⃣4️⃣ Upload Release APK
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
