--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,67 +30,53 @@ jobs:
             .packages
           key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.yaml') }}
 
-      # 4️⃣ Ensure Android folder exists
-      - name: Ensure Android folder exists
-        run: |
-          if [ ! -d "android/app" ]; then
-            echo "❌ Android folder missing! Commit android/ folder before CI build."
-            exit 1
-          else
-            echo "✅ Android folder exists, skipping creation."
-          fi
-
-      # 5️⃣ Install dependencies
+      # 4️⃣ Install dependencies
       - name: Install dependencies
         run: flutter pub get
 
-      # 6️⃣ Check launcher icon exists
+      # 5️⃣ Check launcher icon exists
       - name: Check launcher icon
         run: |
           if [ ! -f "assets/logo.png" ]; then
             echo "❌ assets/logo.png not found!"
             exit 1
-          else
-            echo "✅ Launcher icon found"
           fi
 
-      # 7️⃣ Generate Launcher Icons
+      # 6️⃣ Generate Launcher Icons
       - name: Generate Launcher Icons
         run: flutter pub run flutter_launcher_icons
 
-      # 8️⃣ Force Gradle version
+      # 7️⃣ Force Gradle version
       - name: Force Gradle version
         run: |
           sed -i 's|distributionUrl=.*|distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
 
-      # 9️⃣ Generate local.properties for CI
+      # 8️⃣ Generate local.properties for CI
       - name: Generate local.properties
         run: |
           echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.3-x64" > android/local.properties
           echo "sdk.dir=/usr/lib/android-sdk" >> android/local.properties
-          echo "✅ Created local.properties"
 
-      # 🔟 Set SDK versions
+      # 9️⃣ Set Android SDK versions
       - name: Set SDK versions
         run: |
           sed -i 's/compileSdkVersion .*/compileSdkVersion 35/' android/app/build.gradle
           sed -i 's/targetSdkVersion .*/targetSdkVersion 35/' android/app/build.gradle
           sed -i 's/minSdkVersion .*/minSdkVersion 21/' android/app/build.gradle
-          echo "✅ SDK versions set"
 
-      # 1️⃣1️⃣ Clean Flutter project
+      # 🔟 Clean Flutter project
       - name: Clean Flutter project
         run: flutter clean
 
-      # 1️⃣2️⃣ Get Flutter dependencies again
+      # 1️⃣1️⃣ Get dependencies again
       - name: Get Flutter dependencies
         run: flutter pub get
 
-      # 1️⃣3️⃣ Build Release APK
+      # 1️⃣2️⃣ Build Release APK
       - name: Build Release APK
         run: flutter build apk --release --no-shrink
 
-      # 1️⃣4️⃣ Upload Release APK
+      # 1️⃣3️⃣ Upload Release APK
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
