--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,68 +30,58 @@ jobs:
             .packages
           key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.yaml') }}
 
-      # 4️⃣ Ensure Android folder exists
-      - name: Ensure Android folder
+      # 4️⃣ Ensure minimal Android folder exists
+      - name: Ensure minimal Android folder
         run: |
-          if [ ! -d "android/app" ]; then
-            echo "⚡ Android folder missing. Creating project structure..."
-            flutter create .
+          if [ ! -f "android/app/build.gradle" ]; then
+            echo "❌ Minimal Android files missing! Commit at least build.gradle, settings.gradle, gradle-wrapper.properties"
+            exit 1
           else
-            echo "✅ Android folder exists, skipping creation."
+            echo "✅ Minimal Android folder exists"
           fi
 
-      # 5️⃣ Set SDK versions BEFORE pub get
+      # 5️⃣ Generate missing Android files if needed
+      - name: Generate missing Android files
+        run: |
+          flutter create . --platforms android
+
+      # 6️⃣ Install dependencies
+      - name: Install dependencies
+        run: flutter pub get
+
+      # 7️⃣ Set Android SDK versions
       - name: Set Android SDK versions
         run: |
           sed -i 's/compileSdkVersion .*/compileSdkVersion 35/' android/app/build.gradle
           sed -i 's/targetSdkVersion .*/targetSdkVersion 35/' android/app/build.gradle
           sed -i 's/minSdkVersion .*/minSdkVersion 21/' android/app/build.gradle
-          echo "✅ Android SDK versions set"
+          echo "✅ SDK versions set"
 
-      # 6️⃣ Generate local.properties for CI
+      # 8️⃣ Force Gradle version
+      - name: Force Gradle version
+        run: |
+          sed -i 's|distributionUrl=.*|distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
+
+      # 9️⃣ Generate local.properties
       - name: Generate local.properties
         run: |
           echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.3-x64" > android/local.properties
           echo "sdk.dir=/usr/lib/android-sdk" >> android/local.properties
-          echo "✅ Created local.properties"
+          echo "✅ local.properties created"
 
-      # 7️⃣ Install dependencies
-      - name: Install Flutter dependencies
-        run: flutter pub get
-
-      # 8️⃣ Check launcher icon exists
-      - name: Check launcher icon
-        run: |
-          if [ ! -f "assets/logo.png" ]; then
-            echo "❌ assets/logo.png not found!"
-            exit 1
-          else
-            echo "✅ Launcher icon found"
-          fi
-
-      # 9️⃣ Generate Launcher Icons
-      - name: Generate Launcher Icons
-        run: flutter pub run flutter_launcher_icons
-
-      # 🔟 Force Gradle version
-      - name: Force Gradle version
-        run: |
-          sed -i 's|distributionUrl=.*|distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
-          echo "✅ Gradle 8.6 forced"
-
-      # 1️⃣1️⃣ Clean Flutter project
+      # 🔟 Clean Flutter project
       - name: Clean Flutter project
         run: flutter clean
 
-      # 1️⃣2️⃣ Get dependencies again
-      - name: Get Flutter dependencies again
+      # 1️⃣1️⃣ Get dependencies again
+      - name: Get Flutter dependencies
         run: flutter pub get
 
-      # 1️⃣3️⃣ Build Release APK
+      # 1️⃣2️⃣ Build Release APK
       - name: Build Release APK
         run: flutter build apk --release --no-shrink
 
-      # 1️⃣4️⃣ Upload Release APK
+      # 1️⃣3️⃣ Upload Release APK
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
