--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,22 +30,28 @@ jobs:
             .packages
           key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.yaml') }}
 
-      # 4️⃣ Ensure Android folder (generate if missing)
+      # 4️⃣ Ensure Android folder exists or generate
       - name: Ensure Android folder
         run: |
           if [ ! -f "android/app/build.gradle" ] || [ ! -f "android/gradle/wrapper/gradle-wrapper.properties" ]; then
             echo "⚠️ Minimal Android files missing! Generating full Android folder..."
             flutter create . --platforms android
-            echo "✅ Android folder generated"
           else
             echo "✅ Minimal Android folder exists"
-          fi
 
       # 5️⃣ Install dependencies
       - name: Install dependencies
         run: flutter pub get
 
-      # 6️⃣ Set Android SDK versions
+      # 6️⃣ Lock critical plugin versions
+      - name: Lock critical plugins
+        run: |
+          flutter pub add geolocator:^14.0.2
+          flutter pub add audioplayers:^6.1.0
+          flutter pub add flutter_plugin_android_lifecycle:^2.0.26
+          flutter pub get
+
+      # 7️⃣ Set Android SDK versions
       - name: Set Android SDK versions
         run: |
           sed -i 's/compileSdkVersion .*/compileSdkVersion 35/' android/app/build.gradle
@@ -53,19 +59,19 @@ jobs:
           sed -i 's/minSdkVersion .*/minSdkVersion 21/' android/app/build.gradle
           echo "✅ SDK versions set"
 
-      # 7️⃣ Force Gradle version
+      # 8️⃣ Force Gradle version
       - name: Force Gradle version
         run: |
           sed -i 's|distributionUrl=.*|distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
 
-      # 8️⃣ Generate local.properties for CI
+      # 9️⃣ Generate local.properties
       - name: Generate local.properties
         run: |
           echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.24.3-x64" > android/local.properties
           echo "sdk.dir=/usr/lib/android-sdk" >> android/local.properties
           echo "✅ local.properties created"
 
-      # 9️⃣ Check launcher icon
+      # 🔟 Check launcher icon
       - name: Check launcher icon
         run: |
           if [ ! -f "assets/logo.png" ]; then
@@ -74,23 +80,23 @@ jobs:
           else
             echo "✅ Launcher icon found"
 
-      # 🔟 Generate Launcher Icons
+      # 1️⃣1️⃣ Generate Launcher Icons
       - name: Generate Launcher Icons
         run: flutter pub run flutter_launcher_icons
 
-      # 1️⃣1️⃣ Clean Flutter project
+      # 1️⃣2️⃣ Clean Flutter project
       - name: Clean Flutter project
         run: flutter clean
 
-      # 1️⃣2️⃣ Get dependencies again
+      # 1️⃣3️⃣ Get dependencies again
       - name: Get Flutter dependencies
         run: flutter pub get
 
-      # 1️⃣3️⃣ Build Release APK
+      # 1️⃣4️⃣ Build Release APK
       - name: Build Release APK
         run: flutter build apk --release --no-shrink
 
-      # 1️⃣4️⃣ Upload Release APK
+      # 1️⃣5️⃣ Upload Release APK
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
